harness/test/errors/091_unknown_format.eu
# Error: unknown export format requested via -x
# This file is valid but will fail when exported with an unknown format
x: 42
